--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -1,15 +1,15 @@
 server {
     listen      80;
-    server_name codemates.ru;
+    server_name eat-smart.ru;
     return 301  https://$host$request_uri;
 }
 
 server {
     listen 443 ssl;
-    server_name codemates.ru;
-    ssl_certificate /etc/nginx/certs/codemates.ru.crt;
-    ssl_certificate_key /etc/nginx/certs/codemates.ru.key;
+    server_name eat-smart.ru;
+    ssl_certificate /etc/nginx/certs/eat-smart.ru.crt;
+    ssl_certificate_key /etc/nginx/certs/eat-smart.ru.key;
     location / {
-        proxy_pass http://app:3000/;
+        proxy_pass http://tgfront:3000/;
     }
 }
