--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       dockerfile: Dockerfile
     networks:
       - main_net
+    ports:
+      - '3000:3000'
 
 networks:
   main_net:
