Add Github Docker cache to CI pipeline

--- a/.github/workflows/github-actions-pipeline.yml
+++ b/.github/workflows/github-actions-pipeline.yml
@@ -27,6 +27,8 @@ jobs:
         context: ./tg-front
         file: ./tg-front/Dockerfile.prod
         tags: ${{ env.REGISTRY_URL }}/aieatsmart/telegram_frontend:latest
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
 
   WebApp-Deploy:
     needs: [Webapp-Docker-Build]
