--- a/tg-front/package.json
+++ b/tg-front/package.json
@@ -10,11 +10,11 @@
         "axios": "^1.7.2",
         "chroma-js": "^2.4.2",
         "framer-motion": "^11.2.11",
+        "ofetch": "^1.3.4",
         "react": "^18.3.1",
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.23.1",
-        "swr": "^2.2.5",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
