--- a/tg-front/package.json
+++ b/tg-front/package.json
@@ -9,6 +9,7 @@
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.7.2",
         "chroma-js": "^2.4.2",
+        "embla-carousel-react": "^8.1.5",
         "framer-motion": "^11.2.11",
         "ofetch": "^1.3.4",
         "react": "^18.3.1",
