--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,14 +12,14 @@ services:
       - '80:80'
       - '443:443'
 
-  tgfront:
-    build:
-      context: ./tg-front
-      dockerfile: Dockerfile
-    networks:
-      - main_net
-    ports:
-      - '3000:3000'
+#  tgfront:
+#    build:
+#      context: ./tg-front
+#      dockerfile: Dockerfile
+#    networks:
+#      - main_net
+#    ports:
+#      - '3000:3000'
 
   backend:
     build:
