--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     build:
       context: ./conf/nginx
       dockerfile: Dockerfile
-    depends_on:
-      - tgfront
+#    depends_on:
+#      - tgfront
     networks:
       - main_net
     ports:
