--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -9,7 +9,10 @@ server {
     server_name eat-smart.ru;
     ssl_certificate /etc/nginx/certs/eat-smart.ru.crt;
     ssl_certificate_key /etc/nginx/certs/eat-smart.ru.key;
-    location / {
-        proxy_pass http://tgfront:3000/;
+;     location / {
+;         proxy_pass http://tgfront:3000/;
+;     }
+        location /api/v1 {
+        proxy_pass http://fbotapp:8080;
     }
 }
