--- a/tg-front/package.json
+++ b/tg-front/package.json
@@ -2,22 +2,23 @@
     "name": "app_telegram",
     "version": "0.1.0",
     "private": true,
-    "dependencies": {
-        "@remixicon/react": "^4.2.0",
-        "@testing-library/jest-dom": "^5.17.0",
-        "@testing-library/react": "^13.4.0",
-        "@testing-library/user-event": "^13.5.0",
-        "axios": "^1.7.2",
-        "chroma-js": "^2.4.2",
-        "embla-carousel-react": "^8.1.5",
-        "framer-motion": "^11.2.11",
-        "ofetch": "^1.3.4",
-        "react": "^18.3.1",
-        "react-chartjs-2": "^5.2.0",
-        "react-dom": "^18.3.1",
-        "react-router-dom": "^6.23.1",
-        "web-vitals": "^2.1.4"
-    },
+	"dependencies": {
+		"@remixicon/react": "^4.2.0",
+		"@testing-library/jest-dom": "^5.17.0",
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "^13.5.0",
+		"axios": "^1.7.2",
+		"chroma-js": "^2.4.2",
+		"embla-carousel-react": "^8.1.5",
+		"framer-motion": "^11.2.11",
+		"ofetch": "^1.3.4",
+		"react": "^18.3.1",
+		"react-chartjs-2": "^5.2.0",
+		"react-dom": "^18.3.1",
+		"react-router-dom": "^6.23.1",
+		"web-vitals": "^2.1.4",
+		"vite": "^5.3.1"
+	},
     "scripts": {
         "start": "vite",
         "build": "vite build",
