--- a/tg-front/Dockerfile
+++ b/tg-front/Dockerfile
@@ -1,19 +1,10 @@
-FROM node:20-slim AS base
+FROM node:20-slim
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
 RUN corepack enable
-COPY . /app
 WORKDIR /app
-
-FROM base AS prod-deps
-RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install
-
-FROM base AS build
-RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install
+COPY . .
+RUN pnpm install
 RUN pnpm run build
-
-FROM base
-COPY --from=prod-deps /app/node_modules /app/node_modules
-COPY --from=build /app/build /app/dist
 EXPOSE 8000
-CMD [ "pnpm", "start" ]
+CMD ["pnpm", "start"]
