--- a/tg-front/Dockerfile
+++ b/tg-front/Dockerfile
@@ -1,7 +1,20 @@
-FROM gplane/pnpm:9-node21-alpine
+FROM node:22-alpine as build
+
+RUN npm install -g pnpm
+
 WORKDIR /app
-COPY . .
+
+COPY package.json pnpm-lock.yaml ./
+
 RUN pnpm install
-RUN pnpm run build
-EXPOSE 8000
-CMD ["pnpm", "start"]
+
+COPY . .
+
+RUN pnpm build
+
+FROM node:22-alpine
+RUN npm install -g serve
+WORKDIR /app
+COPY --from=build /app/build /app
+EXPOSE 9000
+CMD ["serve", "-s", ".", "-l", "9000"]
