--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,12 @@ services:
       - '80:80'
       - '443:443'
 
-  tgfront:
-    build:
-      context: ./tg-front
-      dockerfile: Dockerfile
-    networks:
-      - main_net
+#  tgfront:
+#    build:
+#      context: ./tg-front
+#      dockerfile: Dockerfile
+#    networks:
+#      - main_net
 
   fbotapp:
     build:
