--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,20 +4,20 @@ services:
     build:
       context: ./conf/nginx
       dockerfile: Dockerfile
-#    depends_on:
-#      - tgfront
+    depends_on:
+      - tgfront
     networks:
       - main_net
     ports:
       - '80:80'
       - '443:443'
 
-#  tgfront:
-#    build:
-#      context: ./tg-front
-#      dockerfile: Dockerfile
-#    networks:
-#      - main_net
+  tgfront:
+    build:
+      context: ./tg-front
+      dockerfile: Dockerfile
+    networks:
+      - main_net
 
   fbotapp:
     build:
