--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -9,7 +9,7 @@ server {
     server_name eat-smart.ru;
     ssl_certificate /etc/nginx/certs/eat-smart.ru.crt;
     ssl_certificate_key /etc/nginx/certs/eat-smart.ru.key;
-        location /api/v1 {
+        location / {
         proxy_pass http://tgfront:8000;
     }
         location /api/v1 {
