--- a/tg-front/.env.example
+++ b/tg-front/.env.example
@@ -1,5 +1,5 @@
 # URL of the backend
-EATSMART_API_URL=
+EATSMART_API_URL=https://eat-smart.ru
 
 # URL to the bot
-EATSMART_HOME_URL=https://t.me/eat_smart_bot/app
+EATSMART_HOME_URL=https://t.me/eat_smart_bot
