--- a/tg-front/package.json
+++ b/tg-front/package.json
@@ -2,23 +2,23 @@
     "name": "app_telegram",
     "version": "0.1.0",
     "private": true,
-	"dependencies": {
-		"@remixicon/react": "^4.2.0",
-		"@testing-library/jest-dom": "^5.17.0",
-		"@testing-library/react": "^13.4.0",
-		"@testing-library/user-event": "^13.5.0",
-		"axios": "^1.7.2",
-		"chroma-js": "^2.4.2",
-		"embla-carousel-react": "^8.1.5",
-		"framer-motion": "^11.2.11",
-		"ofetch": "^1.3.4",
-		"react": "^18.3.1",
-		"react-chartjs-2": "^5.2.0",
-		"react-dom": "^18.3.1",
-		"react-router-dom": "^6.23.1",
-		"web-vitals": "^2.1.4",
-		"vite": "^5.3.1"
-	},
+    "dependencies": {
+        "@remixicon/react": "^4.2.0",
+        "@testing-library/jest-dom": "^5.17.0",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "axios": "^1.7.2",
+        "chroma-js": "^2.4.2",
+        "embla-carousel-react": "^8.1.5",
+        "framer-motion": "^11.2.11",
+        "ofetch": "^1.3.4",
+        "react": "^18.3.1",
+        "react-chartjs-2": "^5.2.0",
+        "react-dom": "^18.3.1",
+        "react-router-dom": "^6.23.1",
+        "vite": "^5.3.1",
+        "web-vitals": "^2.1.4"
+    },
     "scripts": {
         "start": "vite",
         "build": "vite build",
@@ -44,6 +44,9 @@
     },
     "devDependencies": {
         "@vitejs/plugin-react": "^4.3.1",
+        "autoprefixer": "^10.4.19",
+        "postcss": "^8.4.39",
+        "tailwindcss": "^3.4.4",
         "vite": "^5.3.1"
     }
 }
