Improve project emojis

--- a/.github/workflows/github-actions-pipeline.yml
+++ b/.github/workflows/github-actions-pipeline.yml
@@ -1,4 +1,4 @@
-name: 🍏🥦 EatSmart CI pipeline
+name: 🍏🤖 EatSmart CI pipeline
 run-name: 🚀 ${{ github.actor }} have started the pipeline
 on:
   push:
