--- a/tg-front/package.json
+++ b/tg-front/package.json
@@ -46,6 +46,7 @@
     "devDependencies": {
         "@vitejs/plugin-react": "^4.3.1",
         "autoprefixer": "^10.4.19",
+        "lightningcss": "^1.25.1",
         "postcss": "^8.4.39",
         "tailwindcss": "^3.4.4",
         "vite": "^5.3.1"
