--- a/tg-front/package.json
+++ b/tg-front/package.json
@@ -2,6 +2,7 @@
     "name": "app_telegram",
     "version": "0.1.0",
     "private": true,
+    "type": "module",
     "dependencies": {
         "@remixicon/react": "^4.2.0",
         "@testing-library/jest-dom": "^5.17.0",
