--- a/tg-front/package.json
+++ b/tg-front/package.json
@@ -17,6 +17,7 @@
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.23.1",
+        "react-slider": "^2.0.6",
         "tailwind-merge": "^2.3.0",
         "vite": "^5.3.1",
         "web-vitals": "^2.1.4"
